--- a/Python IR/injection_recovery.ipynb
+++ b/Python IR/injection_recovery.ipynb
@@ -7,7 +7,8 @@
    "outputs": [],
    "source": [
     "from os import getcwd, walk\n",
-    "from pandas import read_csv, concat"
+    "from pandas import read_csv, concat\n",
+    "from plotnine import ggplot, aes, geom_line, theme_bw"
    ]
   },
   {
@@ -36,131 +37,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mixed_res = read_csv(\"Intcal20.csv\")\n",
+    "mixed_res = mixed_res[mixed_res[\"cal\"] > annual_res[\"year\"].min() - 25]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>year</th>\n",
-       "      <th>d14c</th>\n",
-       "      <th>sig_d14c</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>-5411.0</td>\n",
-       "      <td>90.1</td>\n",
-       "      <td>2.8</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>-5409.0</td>\n",
-       "      <td>97.7</td>\n",
-       "      <td>2.9</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>-5407.0</td>\n",
-       "      <td>96.9</td>\n",
-       "      <td>2.9</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>-5405.0</td>\n",
-       "      <td>93.3</td>\n",
-       "      <td>2.9</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>-5403.0</td>\n",
-       "      <td>90.6</td>\n",
-       "      <td>2.8</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>32</th>\n",
-       "      <td>-637.0</td>\n",
-       "      <td>3.1</td>\n",
-       "      <td>1.7</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>33</th>\n",
-       "      <td>-636.0</td>\n",
-       "      <td>6.5</td>\n",
-       "      <td>1.7</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>34</th>\n",
-       "      <td>-635.0</td>\n",
-       "      <td>2.4</td>\n",
-       "      <td>1.7</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>35</th>\n",
-       "      <td>-634.0</td>\n",
-       "      <td>1.8</td>\n",
-       "      <td>2.4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>36</th>\n",
-       "      <td>-633.0</td>\n",
-       "      <td>2.4</td>\n",
-       "      <td>2.3</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>1012 rows × 3 columns</p>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "      year  d14c  sig_d14c\n",
-       "0  -5411.0  90.1       2.8\n",
-       "1  -5409.0  97.7       2.9\n",
-       "2  -5407.0  96.9       2.9\n",
-       "3  -5405.0  93.3       2.9\n",
-       "4  -5403.0  90.6       2.8\n",
-       "..     ...   ...       ...\n",
-       "32  -637.0   3.1       1.7\n",
-       "33  -636.0   6.5       1.7\n",
-       "34  -635.0   2.4       1.7\n",
-       "35  -634.0   1.8       2.4\n",
-       "36  -633.0   2.4       2.3\n",
-       "\n",
-       "[1012 rows x 3 columns]"
+       "(         cal  d14c  d14csig\n",
+       " 0     1725.0  12.2      2.3\n",
+       " 1     1724.0   9.0      2.1\n",
+       " 2     1724.0  14.0      2.3\n",
+       " 3     1723.0  12.0      2.3\n",
+       " 4     1722.0  11.2      2.1\n",
+       " ...      ...   ...      ...\n",
+       " 9985 -1676.0  16.6      2.0\n",
+       " 9986 -1677.0  16.8      1.9\n",
+       " 9987 -1678.0  15.9      2.0\n",
+       " 9988 -1679.0  18.9      1.8\n",
+       " 9989 -1679.0  17.4      2.0\n",
+       " \n",
+       " [6838 rows x 3 columns],\n",
+       "       year  d14c  sig_d14c\n",
+       " 0  -5411.0  90.1       2.8\n",
+       " 1  -5409.0  97.7       2.9\n",
+       " 2  -5407.0  96.9       2.9\n",
+       " 3  -5405.0  93.3       2.9\n",
+       " 4  -5403.0  90.6       2.8\n",
+       " ..     ...   ...       ...\n",
+       " 32  -637.0   3.1       1.7\n",
+       " 33  -636.0   6.5       1.7\n",
+       " 34  -635.0   2.4       1.7\n",
+       " 35  -634.0   1.8       2.4\n",
+       " 36  -633.0   2.4       2.3\n",
+       " \n",
+       " [1012 rows x 3 columns])"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "mixed_res = read_csv()"
+    "mixed_res, annual_res"
    ]
   },
   {
