Initial visualisation of mixed data

--- a/Python IR/injection_recovery.ipynb
+++ b/Python IR/injection_recovery.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,69 +27,170 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "annual_res = concat([read_csv(data_set) for data_set in data_sets])    \n",
-    "annual_res.sort_values([*annual_res.keys()])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [],
    "source": [
     "mixed_res = read_csv(\"Intcal20.csv\")\n",
-    "mixed_res = mixed_res[mixed_res[\"cal\"] > annual_res[\"year\"].min() - 25]"
+    "mixed_res = mixed_res.assign(id=\"Intcal20\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 109,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pd_concat_iter = [] # Iterable holding DataFrames corresponding to the single year datasets \n",
+    "\n",
+    "for data_set in data_sets:\n",
+    "    iter_set = read_csv(data_set)\n",
+    "    iter_set_id = data_set.split(\"/\")[-1].strip(\".csv\") # id in format AuthorYY_Species\n",
+    "    iter_set = iter_set.assign(id=iter_set_id)\n",
+    "    pd_concat_iter.append(iter_set)\n",
+    "\n",
+    "annual_res = concat(pd_concat_iter) # Constructing the dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>year</th>\n",
+       "      <th>d14c</th>\n",
+       "      <th>sig_d14c</th>\n",
+       "      <th>id</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1725.0</td>\n",
+       "      <td>12.2</td>\n",
+       "      <td>2.3</td>\n",
+       "      <td>Intcal20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1724.0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>2.1</td>\n",
+       "      <td>Intcal20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1724.0</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>2.3</td>\n",
+       "      <td>Intcal20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1723.0</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>2.3</td>\n",
+       "      <td>Intcal20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1722.0</td>\n",
+       "      <td>11.2</td>\n",
+       "      <td>2.1</td>\n",
+       "      <td>Intcal20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32</th>\n",
+       "      <td>-637.0</td>\n",
+       "      <td>3.1</td>\n",
+       "      <td>1.7</td>\n",
+       "      <td>Sakurai20_CedarLw</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>33</th>\n",
+       "      <td>-636.0</td>\n",
+       "      <td>6.5</td>\n",
+       "      <td>1.7</td>\n",
+       "      <td>Sakurai20_CedarLw</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>34</th>\n",
+       "      <td>-635.0</td>\n",
+       "      <td>2.4</td>\n",
+       "      <td>1.7</td>\n",
+       "      <td>Sakurai20_CedarLw</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>35</th>\n",
+       "      <td>-634.0</td>\n",
+       "      <td>1.8</td>\n",
+       "      <td>2.4</td>\n",
+       "      <td>Sakurai20_CedarLw</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>36</th>\n",
+       "      <td>-633.0</td>\n",
+       "      <td>2.4</td>\n",
+       "      <td>2.3</td>\n",
+       "      <td>Sakurai20_CedarLw</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>7850 rows × 4 columns</p>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "(         cal  d14c  d14csig\n",
-       " 0     1725.0  12.2      2.3\n",
-       " 1     1724.0   9.0      2.1\n",
-       " 2     1724.0  14.0      2.3\n",
-       " 3     1723.0  12.0      2.3\n",
-       " 4     1722.0  11.2      2.1\n",
-       " ...      ...   ...      ...\n",
-       " 9985 -1676.0  16.6      2.0\n",
-       " 9986 -1677.0  16.8      1.9\n",
-       " 9987 -1678.0  15.9      2.0\n",
-       " 9988 -1679.0  18.9      1.8\n",
-       " 9989 -1679.0  17.4      2.0\n",
-       " \n",
-       " [6838 rows x 3 columns],\n",
-       "       year  d14c  sig_d14c\n",
-       " 0  -5411.0  90.1       2.8\n",
-       " 1  -5409.0  97.7       2.9\n",
-       " 2  -5407.0  96.9       2.9\n",
-       " 3  -5405.0  93.3       2.9\n",
-       " 4  -5403.0  90.6       2.8\n",
-       " ..     ...   ...       ...\n",
-       " 32  -637.0   3.1       1.7\n",
-       " 33  -636.0   6.5       1.7\n",
-       " 34  -635.0   2.4       1.7\n",
-       " 35  -634.0   1.8       2.4\n",
-       " 36  -633.0   2.4       2.3\n",
-       " \n",
-       " [1012 rows x 3 columns])"
+       "      year  d14c  sig_d14c                 id\n",
+       "0   1725.0  12.2       2.3           Intcal20\n",
+       "1   1724.0   9.0       2.1           Intcal20\n",
+       "2   1724.0  14.0       2.3           Intcal20\n",
+       "3   1723.0  12.0       2.3           Intcal20\n",
+       "4   1722.0  11.2       2.1           Intcal20\n",
+       "..     ...   ...       ...                ...\n",
+       "32  -637.0   3.1       1.7  Sakurai20_CedarLw\n",
+       "33  -636.0   6.5       1.7  Sakurai20_CedarLw\n",
+       "34  -635.0   2.4       1.7  Sakurai20_CedarLw\n",
+       "35  -634.0   1.8       2.4  Sakurai20_CedarLw\n",
+       "36  -633.0   2.4       2.3  Sakurai20_CedarLw\n",
+       "\n",
+       "[7850 rows x 4 columns]"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 110,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "mixed_res, annual_res"
+    "d14c = concat([mixed_res, annual_res])"
    ]
   },
   {
