Transferring to functional template generation

--- a/Python IR/get_template.ipynb
+++ b/Python IR/get_template.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,9 +23,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO[2022-01-14 12:56:46,259]: Unable to initialize backend 'tpu_driver': NOT_FOUND: Unable to find driver in registry given worker: \n",
+      "INFO[2022-01-14 12:56:46,260]: Unable to initialize backend 'gpu': NOT_FOUND: Could not find registered platform with name: \"cuda\". Available platform names are: Host Interpreter\n",
+      "INFO[2022-01-14 12:56:46,261]: Unable to initialize backend 'tpu': INVALID_ARGUMENT: TpuPlatform is not available.\n",
+      "WARNING[2022-01-14 12:56:46,261]: No GPU/TPU found, falling back to CPU. (Set TF_CPP_MIN_LOG_LEVEL=0 and rerun for more info.)\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -37,7 +47,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 500/500 [00:42<00:00, 11.72it/s]\n"
+      "100%|██████████| 500/500 [00:39<00:00, 12.79it/s]\n"
      ]
     },
     {
@@ -51,7 +61,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1000/1000 [01:20<00:00, 12.46it/s]\n"
+      "100%|██████████| 1000/1000 [01:24<00:00, 11.82it/s]\n"
      ]
     }
    ],
@@ -74,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,22 +92,7 @@
     "bayesian_model.mask = full((50,), True, dtype=bool) # Include all 50 years\n",
     "\n",
     "event_parameters = mean(mcmc_samples, axis=0)   # The mcmc fitted parameters\n",
-    "null_event_parameters = array([*event_parameters[:-1], 0])  # Removing the event\n",
-    "\n",
-    "template = bayesian_model.dc14(params=event_parameters) # Running the cbm \n",
-    "template -= bayesian_model.dc14(params=null_event_parameters)   # Removing the sinusoid "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 151,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with open(\"template.csv\", \"w\") as file: # Saving as a .csv\n",
-    "    constructor = writer(file)  \n",
-    "    constructor.writerow([\"year\", \"d14c\"])\n",
-    "    constructor.writerows(zip(bayesian_model.annual, template))"
+    "null_event_parameters = array([*event_parameters[1:-1]])  # Removing the event "
    ]
   }
  ],
