--- a/Python IR/injection_recovery.ipynb
+++ b/Python IR/injection_recovery.ipynb
@@ -14,6 +14,22 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "TEMPLATE_PARAMS = {\"Duration\": 0.74435026, \"Area\": 6.05115708}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "So I ill need to go to the IR_Data_constructor script and continue development. What I need to do is summarize each year. Alternatively as long as there are no duplicate measurements within a group I can vary the size of the template. This means that the template will have to be generational adding considerable time. Unless I could get it to generate a mathematical function in hich case it would be fine. I will go with this last one. So therefore, what I need to do is infer the parameters without the `sin` alternatively I can just use the parameters with the `sin` but only count the non sinusoidal parameters."
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 154,
    "metadata": {},
    "outputs": [],
@@ -57,84 +73,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 233,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "event_template = array(read_csv(\"template.csv\")[\"d14c\"])"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 238,
    "metadata": {},
    "outputs": [],
    "source": [
     "for year in range(750, 801):\n",
     "    design_matrix = array([\n",
-    "        event_template, \n",
+    "        , \n",
     "        full((50,), 1.0), \n",
     "        arange(year - 25, year + 25)\n",
     "    ])\n",
     "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 239,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00,\n",
-       "        0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00,\n",
-       "        0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00,\n",
-       "        0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00,\n",
-       "        0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00,\n",
-       "        0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00,\n",
-       "        4.36076170e-02, 1.14142334e+01, 1.47857551e+01, 1.51628298e+01,\n",
-       "        1.45483905e+01, 1.35906738e+01, 1.25794027e+01, 1.16353701e+01,\n",
-       "        1.07999705e+01, 1.00785298e+01, 9.46135769e+00, 8.93379638e+00,\n",
-       "        8.48079931e+00, 8.08881341e+00, 7.74636905e+00, 7.44408374e+00,\n",
-       "        7.17442965e+00, 6.93143237e+00, 6.71037615e+00, 6.50754514e+00,\n",
-       "        6.32000843e+00, 6.14544707e+00, 5.98201746e+00, 5.82824473e+00,\n",
-       "        5.68294030e+00, 5.54513816e+00],\n",
-       "       [1.00000000e+00, 1.00000000e+00, 1.00000000e+00, 1.00000000e+00,\n",
-       "        1.00000000e+00, 1.00000000e+00, 1.00000000e+00, 1.00000000e+00,\n",
-       "        1.00000000e+00, 1.00000000e+00, 1.00000000e+00, 1.00000000e+00,\n",
-       "        1.00000000e+00, 1.00000000e+00, 1.00000000e+00, 1.00000000e+00,\n",
-       "        1.00000000e+00, 1.00000000e+00, 1.00000000e+00, 1.00000000e+00,\n",
-       "        1.00000000e+00, 1.00000000e+00, 1.00000000e+00, 1.00000000e+00,\n",
-       "        1.00000000e+00, 1.00000000e+00, 1.00000000e+00, 1.00000000e+00,\n",
-       "        1.00000000e+00, 1.00000000e+00, 1.00000000e+00, 1.00000000e+00,\n",
-       "        1.00000000e+00, 1.00000000e+00, 1.00000000e+00, 1.00000000e+00,\n",
-       "        1.00000000e+00, 1.00000000e+00, 1.00000000e+00, 1.00000000e+00,\n",
-       "        1.00000000e+00, 1.00000000e+00, 1.00000000e+00, 1.00000000e+00,\n",
-       "        1.00000000e+00, 1.00000000e+00, 1.00000000e+00, 1.00000000e+00,\n",
-       "        1.00000000e+00, 1.00000000e+00],\n",
-       "       [7.75000000e+02, 7.76000000e+02, 7.77000000e+02, 7.78000000e+02,\n",
-       "        7.79000000e+02, 7.80000000e+02, 7.81000000e+02, 7.82000000e+02,\n",
-       "        7.83000000e+02, 7.84000000e+02, 7.85000000e+02, 7.86000000e+02,\n",
-       "        7.87000000e+02, 7.88000000e+02, 7.89000000e+02, 7.90000000e+02,\n",
-       "        7.91000000e+02, 7.92000000e+02, 7.93000000e+02, 7.94000000e+02,\n",
-       "        7.95000000e+02, 7.96000000e+02, 7.97000000e+02, 7.98000000e+02,\n",
-       "        7.99000000e+02, 8.00000000e+02, 8.01000000e+02, 8.02000000e+02,\n",
-       "        8.03000000e+02, 8.04000000e+02, 8.05000000e+02, 8.06000000e+02,\n",
-       "        8.07000000e+02, 8.08000000e+02, 8.09000000e+02, 8.10000000e+02,\n",
-       "        8.11000000e+02, 8.12000000e+02, 8.13000000e+02, 8.14000000e+02,\n",
-       "        8.15000000e+02, 8.16000000e+02, 8.17000000e+02, 8.18000000e+02,\n",
-       "        8.19000000e+02, 8.20000000e+02, 8.21000000e+02, 8.22000000e+02,\n",
-       "        8.23000000e+02, 8.24000000e+02]])"
-      ]
-     },
-     "execution_count": 239,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "design_matrix"
    ]
   },
   {
