--- a/Python IR/get_template.ipynb
+++ b/Python IR/get_template.ipynb
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +92,7 @@
     "bayesian_model.mask = full((50,), True, dtype=bool) # Include all 50 years\n",
     "\n",
     "event_parameters = mean(mcmc_samples, axis=0)   # The mcmc fitted parameters\n",
-    "null_event_parameters = array([*event_parameters[1:-1]])  # Removing the event "
+    "event_parameters = array([*event_parameters[1::2]])  # Removing the event "
    ]
   }
  ],
