--- a/Python ODE/python_ode.ipynb
+++ b/Python ODE/python_ode.ipynb
@@ -123,22 +123,18 @@
     "    \"\"\"\n",
     "    The bayesian error of the loss function. \n",
     "    \"\"\"\n",
-    "    mask = np.array([0, 0, 0, 1, 1, 1, 1, 1, 1, 0, 0, 0])   # Months of the year to select \n",
-    "    mask = np.hstack((mask for i in range(38)))             # Mask values for the run period (years)\n",
     "\n",
     "    simulation = odeint(*args)[:, 2]    # Running the simulation \n",
     "\n",
-    "    simulation = np.where(mask, x=simulation, y=np.zeros(38 * 12))  # Selecting intersting values\n",
-    "    simulation = np.take(simulation, np.nonzero(simulation)[0])     # Getting the nonzero elements\n",
-    "    simulation = np.reshape(simulation, (38, 6))                    # Shaping for the correct means \n",
+    "\n",
     "    simulation = np.mean(simulation, axis=1)[0:38]                  # Yearly mean via axis \n",
     "    simulation = 1000 * (simulation - u0[2]) / u0[2]                # Deviations from initial \n",
     "    \n",
-    "    miyake = pd.read_csv(f\"{getcwd()}/datasets/775AD/NH/Miyake12_Cedar.csv\")               # Importing the miyake data\n",
-    "    DC14 = np.array([*miyake[\"d14c\"]], dtype=np.float64)           # JAX array for manipulation\n",
-    "    SDC14 = np.array([*miyake[\"sig_d14c\"]], dtype=np.float64)      # JAx array for manipulation \n",
-    "    simulation += np.mean(DC14[1:4])                            # Adding the offset \n",
-    "    return - 0.5 * np.sum(((DC14 - simulation) / SDC14) ** 2)   # Log likelhood as chi-squared "
+    "\n",
+    "    d14c = np.array([*dataset[\"d14c\"]], dtype=np.float64)           # JAX array for manipulation\n",
+    "    sig_d14c = np.array([*dataset[\"sig_d14c\"]], dtype=np.float64)      # JAx array for manipulation \n",
+    "    simulation += np.mean(d14c[1:4])                            # Adding the offset \n",
+    "    return - 0.5 * np.sum(((d14c - simulation) / sig_d14c) ** 2)   # Log likelhood as chi-squared "
    ]
   },
   {
@@ -206,6 +202,8 @@
     "}\n",
     "\n",
     "namespaces = {ode : \"ode\", jax_ode : \"jax\"} # For translation from string to module \n",
+    "\n",
+    "dataset = pd.read_csv(f\"{getcwd()}/datasets/775AD/NH/Miyake12_Cedar.csv\") # Importing the miyake data\n",
     "\n",
     "for namespace in namespaces:# Iterating through the namespaces of odeint function \n",
     "    mean, variance = profile(\n",
