Only models a `super_gaussian` pulse now

--- a/Python IR/get_template.ipynb
+++ b/Python IR/get_template.ipynb
@@ -12,12 +12,21 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<frozen importlib._bootstrap>:219: RuntimeWarning: numpy.ndarray size changed, may indicate binary incompatibility. Expected 80 from C header, got 96 from PyObject\n"
+     ]
+    }
+   ],
    "source": [
     "from os import getcwd\n",
     "from ticktack.fitting import SingleFitter\n",
     "from ticktack import load_presaved_model\n",
-    "from jax.numpy import array, pi, mean, arange, full\n",
+    "from jax.numpy import array, mean, exp, sum, inf\n",
+    "from jax import jit\n",
     "from csv import writer"
    ]
   },
@@ -25,15 +34,43 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "@jit\n",
+    "def super_gaussian(t, *args):\n",
+    "    const, start_time, duration, area = array(list(args)).reshape(-1)  # Loading parameters\n",
+    "    \n",
+    "    middle = start_time + duration / 2 # Middle of event \n",
+    "    height = area / duration    # Amplitude of event\n",
+    "    gauss = height * exp(- ((t - middle) / (duration / 2)) ** 16)   # Gaussian pulse\n",
+    "\n",
+    "    return const + gauss\n",
+    "\n",
+    "@jit \n",
+    "def log_likelihood(params, low_bounds, high_bounds):\n",
+    "    d14c = fitter.dc14(params)\n",
+    "    chi2 = -0.5 * sum(((fitter.d14c_data - d14c) / fitter.d14c_data_error) ** 2)\n",
+    "\n",
+    "    chi2 += ((params[0] < low_bounds[0]) | (params[0] > high_bounds[0])) * -inf\n",
+    "    chi2 += ((params[1] < low_bounds[1]) | (params[1] > high_bounds[1])) * -inf\n",
+    "    chi2 += ((params[2] < low_bounds[2]) | (params[2] > high_bounds[2])) * -inf\n",
+    "    chi2 += ((params[3] < low_bounds[3]) | (params[3] > high_bounds[3])) * -inf\n",
+    "    return chi2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO[2022-01-14 12:56:46,259]: Unable to initialize backend 'tpu_driver': NOT_FOUND: Unable to find driver in registry given worker: \n",
-      "INFO[2022-01-14 12:56:46,260]: Unable to initialize backend 'gpu': NOT_FOUND: Could not find registered platform with name: \"cuda\". Available platform names are: Host Interpreter\n",
-      "INFO[2022-01-14 12:56:46,261]: Unable to initialize backend 'tpu': INVALID_ARGUMENT: TpuPlatform is not available.\n",
-      "WARNING[2022-01-14 12:56:46,261]: No GPU/TPU found, falling back to CPU. (Set TF_CPP_MIN_LOG_LEVEL=0 and rerun for more info.)\n"
+      "INFO[2022-01-17 07:28:43,747]: Unable to initialize backend 'tpu_driver': NOT_FOUND: Unable to find driver in registry given worker: \n",
+      "INFO[2022-01-17 07:28:43,749]: Unable to initialize backend 'gpu': NOT_FOUND: Could not find registered platform with name: \"cuda\". Available platform names are: Host Interpreter\n",
+      "INFO[2022-01-17 07:28:43,750]: Unable to initialize backend 'tpu': INVALID_ARGUMENT: TpuPlatform is not available.\n",
+      "WARNING[2022-01-17 07:28:43,751]: No GPU/TPU found, falling back to CPU. (Set TF_CPP_MIN_LOG_LEVEL=0 and rerun for more info.)\n"
      ]
     },
     {
@@ -47,7 +84,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 500/500 [00:39<00:00, 12.79it/s]\n"
+      "100%|██████████| 500/500 [00:41<00:00, 11.99it/s]\n"
      ]
     },
     {
@@ -61,7 +98,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1000/1000 [01:24<00:00, 11.82it/s]\n"
+      "100%|██████████| 1000/1000 [01:28<00:00, 11.27it/s]\n"
      ]
     }
    ],
@@ -71,29 +108,56 @@
     "    production_rate_units=\"atoms/cm^2/s\"    # Units of the model\n",
     ")\n",
     "\n",
-    "bayesian_model = SingleFitter(carbon_box_model)   # Fitting a model \n",
-    "bayesian_model.prepare_function(model=\"simple_sinusoid\") # Generating the simple sin model\n",
-    "bayesian_model.load_data(f\"{getcwd()}/datasets/775AD/NH/Miyake12_Cedar.csv\")   \n",
+    "fitter = SingleFitter(carbon_box_model)   # Fitting a model \n",
+    "fitter.prepare_function(model=super_gaussian) # Generating the simple sin model\n",
+    "fitter.load_data(f\"{getcwd()}/datasets/775AD/NH/Miyake12_Cedar.csv\")   \n",
     "\n",
-    "mcmc_samples = bayesian_model.MarkovChainSampler(\n",
-    "    array([775., 1./12, pi/2., 81./12]),    # Initial guess of the parameters\n",
-    "    likelihood=bayesian_model.log_joint_simple_sinusoid,    \n",
-    "    args=(array([770., 0., -pi, 0.]), array([780., 5., pi, 15.])) # Upper and lower bounds\n",
+    "mcmc_samples = fitter.MarkovChainSampler(\n",
+    "    array([2.0, 775.0, 0.1, 0.1]),    # Initial guess of the parameters\n",
+    "    likelihood=log_likelihood,    \n",
+    "    args=(array([0.0, 770.0, 0.0, 0.0]), array([5.0, 780.0, 10.0, 10.0])) # Upper and lower bounds\n",
     ")   "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "bayesian_model.annual = arange(750, 800)    # 50 year window with the event in the middle\n",
-    "bayesian_model.mask = full((50,), True, dtype=bool) # Include all 50 years\n",
+    "# bayesian_model.annual = arange(750, 800)    # 50 year window with the event in the middle\n",
+    "# bayesian_model.mask = full((50,), True, dtype=bool) # Include all 50 years\n",
     "\n",
     "event_parameters = mean(mcmc_samples, axis=0)   # The mcmc fitted parameters\n",
-    "event_parameters = array([*event_parameters[1::2]])  # Removing the event "
+    "# event_parameters = array([*event_parameters[1::2]])  # Removing the event "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DeviceArray([  1.87404263, 773.61233164,   0.7751569 ,   5.59385463], dtype=float64)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "event_parameters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
