--- a/Python IR/get_template.ipynb
+++ b/Python IR/get_template.ipynb
@@ -125,39 +125,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# bayesian_model.annual = arange(750, 800)    # 50 year window with the event in the middle\n",
-    "# bayesian_model.mask = full((50,), True, dtype=bool) # Include all 50 years\n",
-    "\n",
-    "event_parameters = mean(mcmc_samples, axis=0)   # The mcmc fitted parameters\n",
-    "# event_parameters = array([*event_parameters[1::2]])  # Removing the event "
+    "event_parameters = mean(mcmc_samples, axis=0)   # The mcmc fitted parameters"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "DeviceArray([  1.87404263, 773.61233164,   0.7751569 ,   5.59385463], dtype=float64)"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "event_parameters"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
