Fixed production function and loading `dc14` using `getattr`

--- a/Python IR/injection_recovery.ipynb
+++ b/Python IR/injection_recovery.ipynb
@@ -2,23 +2,35 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 235,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
     "from pandas import read_csv\n",
-    "from numpy.linalg import pinv\n",
-    "from numpy import where, array, arange, full\n",
+    "from ticktack import load_presaved_model\n",
+    "from ticktack.fitting import SingleFitter\n",
+    "from operator import methodcaller\n",
+    "from jax.numpy.linalg import pinv\n",
+    "from jax.numpy import where, array, arange, full, exp, vstack\n",
+    "from jax.numpy import float32\n",
     "from plotnine import *"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
-    "TEMPLATE_PARAMS = {\"Duration\": 0.74435026, \"Area\": 6.05115708}"
+    "def super_gaussian(time, start_time):\n",
+    "    DURATION = 0.7751569    # From `get_template`\n",
+    "    AREA = 5.59385463       # From `get_template`\n",
+    "\n",
+    "    middle = start_time + DURATION / 2 # Middle of event \n",
+    "    height = AREA / DURATION    # Amplitude of event\n",
+    "    gauss = height * exp(- ((time - middle) / (DURATION / 2)) ** 16)   # Gaussian pulse\n",
+    "\n",
+    "    return gauss"
    ]
   },
   {
@@ -30,18 +42,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    "injection_data = read_csv(\"IR_Data.csv\")\n",
-    "injection_data = injection_data[injection_data[\"year\"] < 825]\n",
-    "injection_data = injection_data[injection_data[\"year\"] > 725]"
+    "#! Can possibly get all of this from the fitting object as `jax` types instantly\n",
+    "injection_data = read_csv(\"IR_Data.csv\")    # Loading the entire dataset\n",
+    "injection_data = injection_data[injection_data[\"year\"] < 825]   # Subsetting into test section\n",
+    "injection_data = injection_data[injection_data[\"year\"] > 725]   # Lower bound "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "carbon_box_model = load_presaved_model(\"Guttler14\", \n",
+    "    production_rate_units=\"atoms/cm^2/s\")\n",
+    "fitting_object = SingleFitter(carbon_box_model)\n",
+    "fitting_object.load_data(\"IR_Data.csv\")\n",
+    "fitting_object.prepare_function(model=super_gaussian)\n",
+    "dc14 = getattr(fitting_object, \"dc14\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -57,10 +84,10 @@
     {
      "data": {
       "text/plain": [
-       "<ggplot: (8754809824178)>"
+       "<ggplot: (8731460342592)>"
       ]
      },
-     "execution_count": 227,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -73,16 +100,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 238,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
     "for year in range(750, 801):\n",
-    "    design_matrix = array([\n",
-    "        , \n",
-    "        full((50,), 1.0), \n",
-    "        arange(year - 25, year + 25)\n",
-    "    ])\n",
+    "    chunked_data = injection_data[injection_data[\"year\"] > year - 25]\n",
+    "    chunked_data = chunked_data[chunked_data[\"year\"] < year + 25]\n",
+    "    \n",
+    "    chunked_years = chunked_data[\"year\"]\n",
+    "    chunked_event = super_gaussian(chunked_years, year)\n",
+    "    chunked_const = full(chunked_years.shape, 1.0)\n",
+    "    \n",
+    "    design_matrix = vstack([chunked_const, chunked_years, chunked_event])\n",
     "    "
    ]
   },
