Attempting `CarbonBoxModel.run()` but failing

--- a/Python IR/injection_recovery.ipynb
+++ b/Python IR/injection_recovery.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "from pandas import read_csv\n",
     "from ticktack import load_presaved_model\n",
     "from ticktack.fitting import SingleFitter\n",
-    "from operator import methodcaller\n",
+    "from functools import partial\n",
     "from jax.numpy.linalg import pinv\n",
     "from jax.numpy import where, array, arange, full, exp, vstack\n",
     "from jax.numpy import float32\n",
@@ -47,28 +47,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO[2022-01-17 08:35:18,344]: Unable to initialize backend 'tpu_driver': NOT_FOUND: Unable to find driver in registry given worker: \n",
-      "INFO[2022-01-17 08:35:18,345]: Unable to initialize backend 'gpu': NOT_FOUND: Could not find registered platform with name: \"cuda\". Available platform names are: Host Interpreter\n",
-      "INFO[2022-01-17 08:35:18,346]: Unable to initialize backend 'tpu': INVALID_ARGUMENT: TpuPlatform is not available.\n",
-      "WARNING[2022-01-17 08:35:18,347]: No GPU/TPU found, falling back to CPU. (Set TF_CPP_MIN_LOG_LEVEL=0 and rerun for more info.)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "carbon_box_model = load_presaved_model(\"Guttler14\", \n",
     "    production_rate_units=\"atoms/cm^2/s\")   # Creating a test model \n",
-    "fitting_object = SingleFitter(carbon_box_model) # Test fitting object\n",
-    "fitting_object.load_data(\"IR_Data.csv\") #! Reloading the data\n",
-    "fitting_object.prepare_function(model=super_gaussian)   \n",
-    "dc14 = getattr(fitting_object, \"dc14\")"
+    "run_chunk = getattr(carbon_box_model, \"run\")\n",
+    "runk_chunk = partial(run_chunk, oversample=1000, production=super_gaussian, )"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<bound method CarbonBoxModel.run of <ticktack.ticktack.CarbonBoxModel object at 0x7fa06c7df7f0>>"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -98,6 +103,13 @@
     "    \n",
     "    design_matrix = vstack([chunked_const, chunked_years, chunked_event])\n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "So I might go ham and use the `run` function from the `CarbonBoxModel` instead of trying to use the `SingleFitter` class. This will hopefully allow me to avoid all of the current issues that I am facing."
    ]
   },
   {
