Pre-major deletion checkpoint

--- a/Python IR/get_template.ipynb
+++ b/Python IR/get_template.ipynb
@@ -12,15 +12,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "<frozen importlib._bootstrap>:219: RuntimeWarning: numpy.ndarray size changed, may indicate binary incompatibility. Expected 80 from C header, got 96 from PyObject\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from os import getcwd\n",
     "from ticktack.fitting import SingleFitter\n",
@@ -29,6 +21,20 @@
     "from jax import jit\n",
     "from csv import writer"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "So for just modelling the troposphere I will want to set things up so that I have a differential equation where $f(x) = e^{x^{8}}$ is the rate of change. I will then use `scipy.optimize.minimize()` to minimize a loss function with respect to the solution of the ode as determined by the `return` of `ode.odeint`. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -44,7 +50,7 @@
     "    height = area / duration    # Amplitude of event\n",
     "    gauss = height * exp(- ((t - middle) / (duration / 2)) ** 16)   # Gaussian pulse\n",
     "\n",
-    "    return const + gauss\n",
+    "    return gauss\n",
     "\n",
     "@jit \n",
     "def log_likelihood(params, low_bounds, high_bounds):\n",
